Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-29143

qmake doesn't treat /openmp- properly

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 4.8.5, 5.0.2
    • 4.8.4, 5.0.0
    • Build tools: qmake
    • None
    • Windows 7 x64

    Description

      qmake only checks for the 'open' prefix and then sets OpenMP to true @ http://qt.gitorious.org/qt/qt/blobs/4.8/qmake/generators/win32/msvc_objectmodel.cpp#line1082

      But there also is the /openmp- variant to explicitly disable the option.

      There might be more such issues in the code since it often only checks the prefix.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jbornema Joerg Bornemann
            trass3r Unk
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes