qmake/generators/win32/msvc_objectmodel.cpp
@@ -1078,11 +1078,20 @@ bool VCCLCompilerTool::parseOption(const char* option)
         }
         found = false; break;
     case 'o':
-        if (second == 'p' && third == 'e' && fourth == 'n') {
-            OpenMP = _True;
-            break;
+    {
+        const char *str = option + 2;
+        const size_t len = strlen(str);
+        if (len >= 5 && len <= 6 && strncmp(str, "penmp", 5) == 0) {
+            if (len == 5) {
+                OpenMP = _True;
+                break;
+            } else if (str[5] == '-') {
+                OpenMP = _False;
+                break;
+            }
         }
         found = false; break;
+    }
     case 's':
         if(second == 'h' && third == 'o' && fourth == 'w') {
             ShowIncludes = _True;
